2005-06-23  James Henstridge  <james@jamesh.id.au>

	* jhbuild/commands/sanitycheck.py (check_version): use enumerate()
	where appropriate.

	* jhbuild/frontends/terminal.py (TerminalBuildScript.execute): use
	execute_pprint() again for "CVS" colourisation.

	* jhbuild/utils/cmds.py (execute_pprint): add back because it is
	used by tinderbox too, but port to subprocess.

	* jhbuild/frontends/terminal.py (TerminalBuildScript.execute): use
	the subprocess module to implement execute().

	* jhbuild/utils/cmds.py (get_output): use subprocess module.
	(execute_pprint): remove function.

	* jhbuild/monkeypatch.py: add enumerate() and string.Template (not
	used yet).
	(subprocess): provide the subprocess module if it isn't available.

	* README: bump required python version to 2.2.

2005-06-23  Kaushal Kumar  <kakumar@novell.com>

	* modulesets/gnome-2.12.modules:

	Remove Gal. Gal has merged into evolution.

2005-06-22  Seth Nickell  <seth@gnome.org>

	* modulesets/gnome-2.12.modules:

	Remove luminocity from gnome-2.12 modules. The entry
	here is redundant with freedesktop.modules, AND its
	incorrect (dependency list is not complete).

2005-06-21  James Henstridge  <james@jamesh.id.au>

	* modulesets/gnome26.modules:
	* modulesets/gnome28.modules:
	* modulesets/gnome-2.10.modules:
	* modulesets/gnome-2.12.modules: update to libgpg-error 1.1,
	opencdk 0.5.7 and gnutls 1.2.4.

	* jhbuild/monkeypatch.py: a module to add features to the standard
	library that don't exist in old versions.  At the moment, it just
	includes the True/False fix.

	* jhbuild/__init__.py: move monkeypatch code out into a separate
	file.

2005-06-20  Federico Mena Quintero  <federico@ximian.com>

	* modulesets/gnome-2.10.modules: Use the gnome-2-10 branch for
	gnome-session.

2005-06-20  James Henstridge  <james@jamesh.id.au>

	* patches/howl-1.0.0-buildfix.patch: the path.

	* modulesets/gnome-2.10.modules: same here.

	* modulesets/gnome-2.12.modules: update to Howl 1.0.0.  Include a