@@ -1,5 +1,8 @@
 2005-06-23  James Henstridge  <james@jamesh.id.au>
 
+	* jhbuild/commands/sanitycheck.py: pass argument lists instead of
+	strings, to avoid shell calls.
+
 	* jhbuild/commands/sanitycheck.py (check_version): use enumerate()
 	where appropriate.
 
